--- a/public/views/driver.html
+++ b/public/views/driver.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h1>Welcome, {{driverName}}</h1>
+    <h1>Welcome, {{driverName}}</h1> <a href="#" ng-click="logout()">Logout</a>
     
   </div>
   <div class="row">
@@ -11,8 +11,8 @@
   <div class="row">
     <div class="col-xs-12" ng-show="showAddForm">
       <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" ng-model="addForm.name" id="name">
+        <label for="origin">From</label>
+        <input type="text" class="form-control" ng-model="addForm.origin" id="origin">
       </div>
       <div class="form-group">
         <label for="spaces">Spaces Available:</label>
@@ -22,27 +22,32 @@
         <label for="destination">Destination</label>
         <input type="text" class="form-control" ng-model="addForm.destination" id="destination">
       </div>
-      <button type="submit" class="btn btn-default" ng-click="addTrip()">Add</button>
+      <div class="form-group">
+        <label for="time">Time</label>
+        <input type="text" class="form-control" ng-model="addForm.time" id="time">
+      </div>
+      <button type="submit" class="btn btn-default" ng-click="addTrip()" ng-disabled="addDisabled()">Add</button>
     </form>
   </div>
   <div class="row">
     <div class="col-xs-12">
-      <h2>My Rides</h2>
-      <table class="table table-hover">
+      <h2>My Ride History</h2>
+      <div ng-show="rideHistory.length == 0">No rides!</div>
+      <table class="table table-hover" ng-hide="rideHistory.length == 0">
         <thead>
           <tr>
-            <th>Car</th>
+            <th>Origin</th>
             <th>Destination</th>
-            <th>Vacancies</th>
-            <th></th>
+            <th>Time</th>
+            <th>Earnings</th>
           </tr>
         </thead>
         <tbody>
-          <tr ng-repeat="car in carList">
-            <td>{{car.name}}</td>
-            <td>{{car.destination}}</td>
-            <td>{{car.spaces}}</td>
-            <th><button class="btn btn-danger clickable" ng-click="delete(car.id)">Delete</button></th>
+          <tr ng-repeat="car in rideHistory">
+            <td>{{car.origin}}</td>
+            <td>{{car.dest}}</td>
+            <td>{{car.ride_time}}</td>
+            <td>${{car.earned}}</td>
           </tr>
         </tbody>
       </table>
